# sumsy

./: .gitignore  .prettierignore  .prettierrc.json  CONTRIBUTING.md  LICENSE.MD  README.md  eslint.config.ts  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.agent/: GLOBAL_LEARNINGS.md
.agent/skills/agent-browser/: SKILL.md
.agent/skills/analista-arquitectura-codigo/: SKILL.md
.agent/skills/analista-decisiones-tecnicas/: SKILL.md
.agent/skills/analizador-repos-skills/: SKILL.md
.agent/workflows/: auditoria-automatica.md  captura-visual-portafolio.md  crear-nueva-skill.md
src/: App.vue  bootstrap.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ButtonDarkMode.vue  DeleteSvg.vue  EditSvg.vue  Footer.vue  NavBar.vue  PasteClipBoard.vue  Table.vue  Tooltip.vue  Total.vue
src/interfaces/: Summary.ts
src/logic/: home.logic.ts
src/pages/: Graphs.vue  Home.vue
src/router/: index.ts
src/scripts/: reset-app.ts  run-reset-app.ts
src/stores/: darkMode.ts  darkModeStore.ts  summaryStore.ts  useDarkMode.ts  user.store.ts
src/views/: Cases.vue  Home.vue  Summaries.vue
tests/: App.test.ts  bootstrap.test.ts  setup.ts  sum.test.ts  vitest.setup.ts
tests/logic/: home.logic.test.ts
tests/pages/: Graphs.test.ts  Home.test.ts
tests/router/: router.test.ts
tests/scripts/: reset-app-store.test.ts
tests/stores/: darkModeStore.test.ts  user.store.test.ts
tests/utils/: index.ts
(+124 files in other folders)
